syntax = "proto3";

package tag;

option go_package = "./;proto";
import "google/protobuf/any.proto";

service TagService {
    rpc GetTagList (GetTagListRequest) returns (GetTagListReply) {}
}

message GetTagListRequest {
    string name = 1;
    uint32 state = 2;
}

message Tag {
    int64 id = 1;
    string name = 2;
    uint32 state = 3;
}

message Pager {
    int64 page = 1;
    int64 page_size = 2;
    int64 total_rows = 3;
}

message GetTagListReply {
    repeated Tag list = 1;
    Pager pager = 2;
}

message Error {
    int32 code = 1;
    string message = 2;
    google.protobuf.Any detail = 3;
}